$Id$

2014-06-30  Christian Franke  <franke@computer.org>

	configure.ac: Update macros as suggested by 'autoconf --warnings=obsolete'.

2014-06-29  Christian Franke  <franke@computer.org>

	configure.ac, Makefile.am, smartd.cpp, smartd_warning.sh.in:
	Add '--with-smartdscriptdir' configure option to change location of
	smartd_warning.sh (Debian bug 710815).
	Add '--with-smartdplugindir' configure option to change (or disable)
	smartd_warning.sh plugin location.
	smartd.conf.5.in: Optionally hide the plugin documentation.

2014-06-27  Christian Franke  <franke@computer.org>

	Makefile.am: Add update-smart-drivedb.8 target.
	update-smart-drivedb.8.in: Add copyright and version info.
	Adjust path names for make target.
	Add FreeBSD/OpenBSD specific info.

2014-06-27  Hannes von Haugwitz  <hannes@vonhaugwitz.com>

	update-smart-drivedb.8.in: New man page (Debian bug 708433).

2014-06-27  Christian Franke  <franke@computer.org>

	configure.ac: Suppress pkg-config warnings about missing 'systemd.pc'.
	Makefile.am: Silence build of man pages and svnversion.h.
	This makes '--enable-silent-rules' or 'make V=0' more effective
	(available since automake 1.13).

2014-06-27  Christian Franke  <franke@computer.org>

	drivedb.h:
	- Crucial/Micron RealSSD C300/M500: New attributes (ticket #326)
	- SandForce Driven SSDs: ADATA XM11, Corsair Force LS, OWC Aura Pro 6G
	  OWC Mercury Electra Pro 3G, PNY Prevail Elite, Transcend SSD320/720

2014-06-25  Christian Franke  <franke@computer.org>

	os_win32.cpp: Fix calculation of SCSI resid.

2014-06-23  Christian Franke  <franke@computer.org>

	scsiata.cpp: usbjmicron_device: Fix SMART Status check for USB bridges
	which always return 0x01.  Add JMicron specific error messages.

2014-06-22  Christian Franke  <franke@computer.org>

	atacmds.cpp, ataprint.cpp: Improve messages for unsupported SMART Status
	command.
	ataprint.cpp: Print form factor.

2014-06-21  Christian Franke  <franke@computer.org>

	drivedb.h: